--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -11,8 +11,8 @@
     <body>
         <img src="grand%20lake%20grill.gif" alt="Grand Lake Grill" style="float:center;width:250px;height:250x;">
     <ul>
-        <li><a href="url link">Home</a></li>
-        <li><a href="url link">Drinks</a></li>
+        <li><a href="url link">Specials</a></li>
+        <li><a href="https://htmlpreview.github.io/?https://raw.githubusercontent.com/GrandlakeQR/GrandLakeMenu/main/Untitled-1.html">Menu</a></li>
         <li><a href="url link">About</a></li>
     </ul>
 
